# src/infrastructure/repositories/user.repository.ts
@@ -1,17 +1,49 @@
+import { Injectable } from '@nestjs/common';
+import { PrismaClient } from '@prisma/client';
 import type { IUserRepository } from 'src/domain/repositories/user.repository.interface';
 import { User } from '../../domain/entities/user.entity';
 
+@Injectable()
 export class UserRepository implements IUserRepository {
-  private users: User[] = [];
+  private prisma: PrismaClient;
+
+  constructor() {
+    this.prisma = new PrismaClient();
+  }
 
   async create(user: User): Promise<User> {
-    this.users.push(user);
-    await Promise.resolve();
-    return user;
+    const createdUser = await this.prisma.user.create({
+      data: {
+        name: user.name,
+        email: user.email,
+        password: user.password,
+      },
+    });
+
+    return new User(
+      createdUser.id,
+      createdUser.name,
+      createdUser.email,
+      createdUser.password,
+      createdUser.created_at,
+      createdUser.updated_at,
+    );
   }
 
   async findById(id: string): Promise<User | null> {
-    await Promise.resolve();
-    return this.users.find((user) => user.id === id) || null;
+    const user = await this.prisma.user.findUnique({
+      where: { id },
+    });
+
+    if (!user) return null;
+
+    return new User(
+      user.id,
+      user.name,
+      user.email,
+      user.password,
+      user.created_at,
+      user.updated_at,
+    );
   }
 }
